# pdfsplitter

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bookmark_feature.md  pyproject.toml  requirements.txt  stage2.md  stage3.md  test_fix_task.md
design/: bookmark_drag_drop.md
docs/: qabstractspinbox.md  qspinbox.md  qvalidator.md  stage1.md
pdfsplitter/: bookmark_validation.py
src/pdfsplitter/: __init__.py  __main__.py  bookmark_detection.py  bookmark_manager.py  bookmark_panel.py  bookmark_tree.py  bookmark_validation.py  main_window.py  pdf_document.py  preview_cache.py  progress_dialog.py  range_management.py  thumbnail_widget.py
tests/: __init__.py  conftest.py  test_bookmark_detection.py  test_bookmark_manager.py  test_bookmark_manager_pdf.py  test_bookmark_panel.py  test_bookmark_tree.py  test_bookmark_validation.py  test_fix_plan.md  test_integration.py  test_main_window.py  test_pdf_document.py  test_preview_cache.py  test_range_management.py  test_range_validator.py  test_thumbnail_widget.py  test_utils.py
