[project]
name = "pdfsplitter"
version = "0.1.0"
description = "A tool for splitting PDF files into chapters"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.8",  # For PDF handling
    "PyQt6>=6.6.1",     # For GUI
    "typing-extensions>=4.9.0",  # For additional type hints
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-qt>=4.4.0",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3 