[project]
name = "pdfsplitter"
version = "0.1.0"
description = "A PDF splitting tool with preview functionality"
authors = [
    {name = "Dan Park", email = "dan@example.com"},
]
dependencies = [
    "pymupdf>=1.23.8",
    "pyqt6>=6.6.1",
    "typing-extensions>=4.9.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
qt_api = "pyqt6"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3 